tests/paczka1/fuzzy1/79921623.err
Error in line 1: VJXX S840 33,4
Error in line 2: tp3 S972 39,7
Error in line 7: jJIBeLv81H S840 22,9
Error in line 15: xNBmzUn S840 96,8
Error in line 21: xNBmzUn S957 52,8
Error in line 3: PX9vyGMG6 S840 90,6
